--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -29,7 +29,7 @@
   },
   "Feature": {
     "title": "Características principales",
-    "description": "Una plantilla de página de destino moderna creada con Next.js, Tailwind CSS, Shadcn y TypeScript",
+    "description": "Landing Page o Página de Inicio moderna, rápida y adaptada para SEO. Desarrollada con Next.js, Tailwind CSS y TypeScript",
     "openSource": "Código abierto",
     "openSourceDesc": "Gratis y de código abierto, perfecto para tu próximo proyecto",
     "ResponsiveDesign": "Diseño Responsivo",
@@ -44,14 +44,14 @@
     "GlobalizationSupportDesc": "Internacionalización incorporada para un alcance global"
   },
   "Testimonial": {
-    "title": "Lo que dicen los usuarios sobre AndresGilli",
-    "description": "Mira lo que piensan los desarrolladores y creadores sobre nuestra plantilla de página de destino.",
-    "quoteOne": "AndresGilli está increíblemente bien estructurado. El código está limpio y la documentación es excelente.",
-    "authorOne": "Alex Chen",
-    "titleOne": "Desarrollador Frontend",
-    "quoteTwo": "El apoyo a la internacionalización es fantástico. Me ahorró horas de trabajo en la localización.",
-    "authorTwo": "María García",
-    "titleTwo": "Gerente de Proyectos",
+    "title": "Casos de éxito",
+    "description": "Algunos de nuestros clientes",
+    "quoteOne": "Landing page para un negocio de network marketing.",
+    "authorOne": "go.soyevesai.com.ar",
+    "titleOne": "Emprendedora",
+    "quoteTwo": "Landing page para empresa de Data Analitics.",
+    "authorTwo": "data.analitics.com.ar",
+    "titleTwo": "Emprendimiento de análisis de datos y capacitación",
     "quoteThree": "La mejor plantilla de página de destino que he usado. La optimización SEO realmente ayudó a la clasificación de nuestro sitio.",
     "authorThree": "James Wilson",
     "titleThree": "Fundador de la startup",
@@ -66,31 +66,31 @@
     "titleSix": "Desarrollador Web"
   },
   "Faq": {
-    "title": "Preguntas comunes",
-    "description": "Todo lo que necesitas saber sobre la plantilla de página de destino AndresGilli",
-    "questionOne": "¿Qué tecnologías utiliza AndresGilli?",
-    "answerOne": "AndresGilli está construido con Next.js, TypeScript, Tailwind CSS y otras herramientas modernas. Utiliza las mejores prácticas para el rendimiento y el SEO.",
-    "questionTwo": "¿Es fácil de personalizar?",
-    "answerTwo": "¡Sí! La plantilla es muy modular y está bien documentada. Puede modificar fácilmente los componentes, los estilos y el contenido para que coincidan con su marca.",
+    "title": "Preguntas frecuentes",
+    "description": "Todo lo que necesitas saber sobre nuestra propuesta de desarrollo",
+    "questionOne": "¿Qué tecnologías van a utilizar?",
+    "answerOne": "Utilizaremos Next.js, TypeScript, Tailwind CSS y otras herramientas modernas. Utiliza las mejores prácticas para el rendimiento y el SEO.",
+    "questionTwo": "¿Realizan la personalización?",
+    "answerTwo": "¡Sí! El sitio web se entrega personalizado.",
     "questionThree": "¿Cómo funciona la internacionalización?",
     "answerThree": "Utilizamos next-intl para la internacionalización, lo que facilita la adición de nuevos idiomas. Sólo tienes que añadir tus traducciones a la carpeta de mensajes.",
-    "questionFour": "¿Puedo usarlo para proyectos comerciales?",
-    "answerFour": "¡Absolutamente! AndresGilli es de código abierto y de uso gratuito tanto para proyectos personales como comerciales.",
-    "questionFive": "¿Necesito experiencia en codificación?",
-    "answerFive": "El conocimiento básico de React y Tailwind CSS es útil, pero nuestra documentación lo hace fácil incluso para los principiantes."
+    "questionFour": "¿Entregan el código?",
+    "answerFour": "¡Absolutamente! AndresGilli es de código abierto y se entrega con la personalización correspondiente.",
+    "questionFive": "¿Lo entregan productivo?",
+    "answerFive": "Podemos entregar solo el código fuente o el sitio web ya funcional. También podemos ayudarte con la configuración de tu dominio con la compra del dominio si es que aún no lo tienes."
   },
   "Cta": {
-    "title": "Comience a crear su página de destino hoy mismo",
-    "description": "Únete a miles de desarrolladores que utilizan AndresGilli para crear páginas de destino modernas y responsivas. Comience con nuestra plantilla de código abierto.",
-    "primaryAction": "Empezar a construir",
+    "title": "¡Quiero mi sitio web!",
+    "description": "Completa el formulario con tus datos y te contactaremos para más información. Su consulta no tiene costo y no genera ningúna compromiso.",
+    "primaryAction": "Enviar consulta",
     "secondaryAction": "Ver en GitHub"
   },
   "Pricing": {
-    "title": "Precios sencillos",
-    "description": "Elige el plan perfecto para tu proyecto",
-    "monthly": "Mensual",
-    "yearly": "Anual",
-    "oneTime": "Vida",
+    "title": "Precios",
+    "description": "Personaliza el precio para tu proyecto",
+    "monthly": "Mínimo",
+    "yearly": "Intermedio",
+    "oneTime": "Completo",
     "month": "mes",
     "popular": "Popular",
     "upgrade": "Comenzar",
@@ -113,7 +113,27 @@
       "llm": "Plantillas premium",
       "tts": "Soporte prioritario",
       "styles": "Personalización avanzada"
-    }
+    },
+    "periodYear": "año",
+    "periodOnce": "una vez",
+    "basicBillingYearly": "Facturado anualmente",
+    "proBillingYearly": "Facturado anualmente",
+    "basicBillingOneTime": "Pago único",
+    "proBillingOneTime": "Pago único"
+  },
+  "Contact": {
+    "title": "Contáctanos",
+    "description": "Estamos aquí para ayudarte. Envíanos un mensaje y te responderemos lo antes posible.",
+    "metaTitle": "Contacto - AndresGilli",
+    "metaDescription": "Ponte en contacto con nosotros para cualquier consulta.",
+    "name": "Nombre",
+    "phone": "Teléfono",
+    "email": "Correo electrónico",
+    "message": "Mensaje",
+    "submit": "Enviar mensaje",
+    "sending": "Enviando...",
+    "successMessage": "¡Mensaje enviado con éxito!",
+    "errorMessage": "Hubo un error al enviar el mensaje. Por favor, inténtalo de nuevo."
   },
   "Hero": {
     "title": "Haz que tu WEB sea más rápida",
